--- a/src/locales/lt.json
+++ b/src/locales/lt.json
@@ -4,11 +4,12 @@
         "user": "V"
     },
     "status": {
-        "waiting": "laukiu",
+        "connected": "prisijungiau",
         "rec_listen": "klausau",
         "rec_failed": "atpažintuvo klaida",
         "saying": "kalbu",
-        "thinking": "mąstau"
+        "thinking": "mąstau",
+        "waiting": "laukiu"
     },
     "input": {
         "placeholder": "Rašykite arba spauskite ir kalbėkite ---->",
